fix job view inline with change to employeeJob model
