# public/docs/openapi.yaml
@@ -7,39 +7,6 @@ servers:
     -
         url: 'http://127.0.0.1:8000'
 paths:
-    /api/user:
-        get:
-            summary: ''
-            description: ''
-            parameters:
-                -
-                    in: header
-                    name: Content-Type
-                    description: ''
-                    example: application/json
-                    schema:
-                        type: string
-                -
-                    in: header
-                    name: Accept
-                    description: ''
-                    example: application/json
-                    schema:
-                        type: string
-            responses:
-                401:
-                    description: ''
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                example:
-                                    message: Unauthenticated.
-                                properties:
-                                    message: { type: string, example: Unauthenticated. }
-            tags:
-                - Endpoints
-            security: []
     /api/auth/login:
         post:
             summary: 'Login API'
